Cleaned up code and fixed whitespace issue.

--- a/terminal/console.css
+++ b/terminal/console.css
@@ -36,6 +36,7 @@
 
 .console-input {
 	color: #ccc;
+	white-space: pre;
 }
 
 .console-input-textarea {
